--- a/src/patternfly/components/MultipleFileUpload/multiple-file-upload.scss
+++ b/src/patternfly/components/MultipleFileUpload/multiple-file-upload.scss
@@ -1,8 +1,9 @@
 // @debug $multiple-file-upload; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
-.#{$multiple-file-upload} {
+:root,
+:where(.#{$multiple-file-upload}) {
   --#{$multiple-file-upload}--GridTemplateColumns: 1fr;
-  --#{$multiple-file-upload}--Gap: var(--#{$pf-global}--spacer--lg);
+  --#{$multiple-file-upload}--Gap: var(--pf-t--global--spacer--md);
 
   // main
   --#{$multiple-file-upload}__main--TextAlign: center;
@@ -12,40 +13,45 @@
     "title"
     "upload"
     "info";
-  --#{$multiple-file-upload}__main--Gap: var(--#{$pf-global}--spacer--md);
-  --#{$multiple-file-upload}__main--PaddingTop: var(--#{$pf-global}--spacer--lg);
-  --#{$multiple-file-upload}__main--PaddingRight: var(--#{$pf-global}--spacer--lg);
-  --#{$multiple-file-upload}__main--PaddingBottom: var(--#{$pf-global}--spacer--xl);
-  --#{$multiple-file-upload}__main--PaddingLeft: var(--#{$pf-global}--spacer--lg);
-  --#{$multiple-file-upload}__main--BorderWidth: var(--#{$pf-global}--BorderWidth--sm);
+  --#{$multiple-file-upload}__main--PaddingTop: var(--pf-t--global--spacer--xl);
+  --#{$multiple-file-upload}__main--PaddingRight: var(--pf-t--global--spacer--xl);
+  --#{$multiple-file-upload}__main--PaddingBottom: var(--pf-t--global--spacer--xl);
+  --#{$multiple-file-upload}__main--PaddingLeft: var(--pf-t--global--spacer--xl);
+  --#{$multiple-file-upload}__main--BorderWidth: var(--pf-t--global--border--width--regular);
   --#{$multiple-file-upload}__main--BorderStyle: dashed;
-  --#{$multiple-file-upload}__main--BorderColor: var(--#{$pf-global}--BorderColor--100);
-  --#{$multiple-file-upload}__main--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
+  --#{$multiple-file-upload}__main--BorderColor: var(--pf-t--global--border--color--default);
+  --#{$multiple-file-upload}__main--BorderRadius: var(--pf-t--global--border--radius--medium);
 
   // title
   --#{$multiple-file-upload}__title--Display: grid;
   --#{$multiple-file-upload}__title--GridTemplateColumns: auto;
-  --#{$multiple-file-upload}__title--Gap: var(--#{$pf-global}--spacer--sm);
+  --#{$multiple-file-upload}__title--Gap: var(--pf-t--global--spacer--lg);
+
+  // title text
+  --#{$multiple-file-upload}__title-text--Color: var(--pf-t--global--text--color--regular);
+  --#{$multiple-file-upload}__title-text--FontSize: var(--pf-t--global--font--size--lg);
+  --#{$multiple-file-upload}__title-text--FontWeight: var(--pf-t--global--font--weight--heading);
 
   // title icon
-  --#{$multiple-file-upload}__title-icon--Color: var(--#{$pf-global}--icon--Color--dark);
+  --#{$multiple-file-upload}__title-icon--Color: var(--pf-t--global--icon--color--regular);
+  --#{$multiple-file-upload}__title-icon--FontSize: var(--pf-t--global--icon--size--xl);
 
   // title text separator
   --#{$multiple-file-upload}__title-text-separator--Display: block;
-  --#{$multiple-file-upload}__title-text-separator--MarginTop: var(--#{$pf-global}--spacer--sm);
+  --#{$multiple-file-upload}__title-text-separator--MarginTop: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__title-text-separator--MarginBottom: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__title-text-separator--Color: var(--pf-t--global--text--color--regular);
+  --#{$multiple-file-upload}__title-text-separator--FontSize: var(--pf-t--global--font--size--md);
+  --#{$multiple-file-upload}__title-text-separator--FontWeight: var(--pf-t--global--font--weight--body);
 
   // info
-  --#{$multiple-file-upload}__info--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$multiple-file-upload}__info--Color: var(--#{$pf-global}--Color--200);
-  --#{$multiple-file-upload}__info--MarginTop: var(--#{$pf-global}--spacer--sm);
+  --#{$multiple-file-upload}__info--FontSize: var(--pf-t--global--font--size--sm);
+  --#{$multiple-file-upload}__info--Color: var(--pf-t--global--text--color--subtle);
+  --#{$multiple-file-upload}__info--MarginTop: var(--pf-t--global--spacer--lg);
 
   // drag-over
-  --#{$multiple-file-upload}--m-drag-over__main--BorderStyle: solid;
-  --#{$multiple-file-upload}--m-drag-over__main--BorderColor: var(--#{$pf-global}--active-color--100);
-  --#{$multiple-file-upload}--m-drag-over__main--BackgroundColor: var(--#{$pf-global}--palette--blue-50);
-  --#{$multiple-file-upload}--m-drag-over__main__title-icon--Color: var(--#{$pf-global}--active-color--100);
-  --#{$multiple-file-upload}--m-drag-over__main__title-text--Color: var(--#{$pf-global}--active-color--100);
-  --#{$multiple-file-upload}--m-drag-over__main__info--Color: var(--#{$pf-global}--active-color--100);
+  --#{$multiple-file-upload}--m-drag-over__main--BorderStyle: dashed;
+  --#{$multiple-file-upload}--m-drag-over__main--BorderColor: var(--pf-t--global--border--color--clicked);
 
   // horizontal
   --#{$multiple-file-upload}--m-horizontal--GridTemplateColumns: fit-content(100%);
@@ -54,29 +60,36 @@
   --#{$multiple-file-upload}--m-horizontal__main--GridTemplateAreas:
     "title upload"
     "info upload";
-  --#{$multiple-file-upload}--m-horizontal__main--Gap: var(--#{$pf-global}--spacer--sm) var(--#{$pf-global}--spacer--2xl);
-  --#{$multiple-file-upload}--m-horizontal__main--PaddingBottom: var(--#{$pf-global}--spacer--lg);
+  --#{$multiple-file-upload}--m-horizontal__main--Gap: var(--pf-t--global--spacer--sm) var(--pf-t--global--spacer--lg);
+  --#{$multiple-file-upload}--m-horizontal__main--PaddingBottom: var(--pf-t--global--spacer--lg);
   --#{$multiple-file-upload}--m-horizontal__title--GridTemplateColumns: auto 1fr;
-  --#{$multiple-file-upload}--m-horizontal__title--Gap: var(--#{$pf-global}--spacer--xs);
+  --#{$multiple-file-upload}--m-horizontal__title--Gap: var(--pf-t--global--spacer--sm);
   --#{$multiple-file-upload}--m-horizontal__title-text-separator--Display: inline;
   --#{$multiple-file-upload}--m-horizontal__title-text-separator--MarginTop: 0;
+  --#{$multiple-file-upload}--m-horizontal__title-text-separator--FontSize: var(--pf-t--global--font--size--lg);
+  --#{$multiple-file-upload}--m-horizontal__title-text-separator--FontWeight: var(--pf-t--global--font--weight--heading);
   --#{$multiple-file-upload}--m-horizontal__info--MarginTop: 0;
+
+  // status container
+  --#{$multiple-file-upload}__status--PaddingTop: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__status--PaddingBottom: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__status--PaddingLeft: var(--pf-t--global--spacer--md);
+  --#{$multiple-file-upload}__status--PaddingRight: var(--pf-t--global--spacer--md);
 
   // status progress
   --#{$multiple-file-upload}__status-progress--GridTemplateColumns: auto 1fr;
-  --#{$multiple-file-upload}__status-progress--Gap: var(--#{$pf-global}--spacer--sm);
+  --#{$multiple-file-upload}__status-progress--Gap: var(--pf-t--global--spacer--sm);
 
   // status progress icon
   --#{$multiple-file-upload}__status-progress-icon--Color: var(--#{$pf-global}--icon--Color--dark);
 
   // status item
-  --#{$multiple-file-upload}__status-item--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$multiple-file-upload}__status-item--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$multiple-file-upload}__status-item--first-child--PaddingTop: 0;
+  --#{$multiple-file-upload}__status-item--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$multiple-file-upload}__status-item--PaddingBottom: var(--pf-t--global--spacer--md);
   --#{$multiple-file-upload}__status-item--GridTemplateColumns: auto 1fr auto;
-  --#{$multiple-file-upload}__status-item--Gap: var(--#{$pf-global}--spacer--sm);
-  --#{$multiple-file-upload}__status-item--BorderWidth: var(--#{$pf-global}--BorderWidth--sm);
-  --#{$multiple-file-upload}__status-item--BorderColor: var(--#{$pf-global}--BorderColor--100);
+  --#{$multiple-file-upload}__status-item--Gap: var(--pf-t--global--spacer--sm);
+  --#{$multiple-file-upload}__status-item--BorderWidth: var(--pf-t--global--border--width--regular);
+  --#{$multiple-file-upload}__status-item--BorderColor: var(--pf-t--global--border--color--default);
 
   // status item icon
   --#{$multiple-file-upload}__status-item-icon--Color: var(--#{$pf-global}--icon--Color--dark);
@@ -86,14 +99,16 @@
 
   // status item progress
   --#{$multiple-file-upload}__status-item-progress--GridTemplateColumns: fit-content(100%) max-content;
-  --#{$multiple-file-upload}__status-item-progress--Gap: var(--#{$pf-global}--spacer--sm);
+  --#{$multiple-file-upload}__status-item-progress--Gap: var(--pf-t--global--spacer--sm);
 
   // status item progress text
   --#{$multiple-file-upload}__status-item-progress-text--Color: var(--#{$pf-global}--primary-color--100);
 
   // status item progress size
   --#{$multiple-file-upload}__status-item-progress-size--Color: var(--#{$pf-global}--Color--200);
+}
 
+.#{$multiple-file-upload} {
   display: grid;
   grid-template-columns: var(--#{$multiple-file-upload}--GridTemplateColumns);
   gap: var(--#{$multiple-file-upload}--Gap);
@@ -109,16 +124,14 @@
     --#{$multiple-file-upload}__title--Gap: var(--#{$multiple-file-upload}--m-horizontal__title--Gap);
     --#{$multiple-file-upload}__title-text-separator--Display: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--Display);
     --#{$multiple-file-upload}__title-text-separator--MarginTop: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--MarginTop);
+    --#{$multiple-file-upload}__title-text-separator--FontSize: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--FontSize);
+    --#{$multiple-file-upload}__title-text-separator--FontWeight: var(--#{$multiple-file-upload}--m-horizontal__title-text-separator--FontWeight);
     --#{$multiple-file-upload}__info--MarginTop: var(--#{$multiple-file-upload}--m-horizontal__info--MarginTop);
   }
 
   &.pf-m-drag-over {
     --#{$multiple-file-upload}__main--BorderStyle: var(--#{$multiple-file-upload}--m-drag-over__main--BorderStyle);
     --#{$multiple-file-upload}__main--BorderColor: var(--#{$multiple-file-upload}--m-drag-over__main--BorderColor);
-    --#{$multiple-file-upload}__main--BackgroundColor: var(--#{$multiple-file-upload}--m-drag-over__main--BackgroundColor);
-    --#{$multiple-file-upload}__title-icon--Color: var(--#{$multiple-file-upload}--m-drag-over__main__title-icon--Color);
-    --#{$multiple-file-upload}__title-text--Color: var(--#{$multiple-file-upload}--m-drag-over__main__title-text--Color);
-    --#{$multiple-file-upload}__info--Color: var(--#{$multiple-file-upload}--m-drag-over__main__info--Color);
   }
 }
 
@@ -128,13 +141,14 @@
   grid-template-rows: var(--#{$multiple-file-upload}__main--GridTemplateRows);
   grid-template-columns: var(--#{$multiple-file-upload}__main--GridTemplateColumns);
   gap: var(--#{$multiple-file-upload}__main--Gap);
+  align-items: center;
   padding-block-start: var(--#{$multiple-file-upload}__main--PaddingTop);
   padding-block-end: var(--#{$multiple-file-upload}__main--PaddingBottom);
   padding-inline-start: var(--#{$multiple-file-upload}__main--PaddingLeft);
   padding-inline-end: var(--#{$multiple-file-upload}__main--PaddingRight);
   text-align: var(--#{$multiple-file-upload}__main--TextAlign);
-  background-color: var(--#{$multiple-file-upload}__main--BackgroundColor);
   border: var(--#{$multiple-file-upload}__main--BorderWidth) var(--#{$multiple-file-upload}__main--BorderStyle) var(--#{$multiple-file-upload}__main--BorderColor);
+  border-radius: var(--#{$multiple-file-upload}__main--BorderRadius);
 }
 
 .#{$multiple-file-upload}__title {
@@ -145,16 +159,23 @@
 }
 
 .#{$multiple-file-upload}__title-icon {
+  font-size: var(--#{$multiple-file-upload}__title-icon--FontSize);
   color: var(--#{$multiple-file-upload}__title-icon--Color);
 }
 
 .#{$multiple-file-upload}__title-text {
+  font-size: var(--#{$multiple-file-upload}__title-text--FontSize);
+  font-weight: var(--#{$multiple-file-upload}__title-text--FontWeight);
   color: var(--#{$multiple-file-upload}__title-text--Color, inherit);
 }
 
 .#{$multiple-file-upload}__title-text-separator {
   display: var(--#{$multiple-file-upload}__title-text-separator--Display);
   margin-block-start: var(--#{$multiple-file-upload}__title-text-separator--MarginTop);
+  margin-block-end: var(--#{$multiple-file-upload}__title-text-separator--MarginBottom);
+  font-size: var(--#{$multiple-file-upload}__title-text-separator--FontSize);
+  font-weight: var(--#{$multiple-file-upload}__title-text-separator--FontWeight);
+  color: var(--#{$multiple-file-upload}__title-text-separator--Color);
 }
 
 .#{$multiple-file-upload}__upload {
@@ -166,6 +187,13 @@
   margin-block-start: var(--#{$multiple-file-upload}__info--MarginTop);
   font-size: var(--#{$multiple-file-upload}__info--FontSize);
   color: var(--#{$multiple-file-upload}__info--Color);
+}
+
+.#{$multiple-file-upload}__status {
+  padding-block-start: var(--#{$multiple-file-upload}__status--PaddingTop);
+  padding-block-end: var(--#{$multiple-file-upload}__status--PaddingBottom);
+  padding-inline-start: var(--#{$multiple-file-upload}__status--PaddingLeft);
+  padding-inline-end: var(--#{$multiple-file-upload}__status--PaddingRight);
 }
 
 .#{$multiple-file-upload}__status,
@@ -190,10 +218,6 @@
   padding-block-start: var(--#{$multiple-file-upload}__status-item--PaddingTop);
   padding-block-end: var(--#{$multiple-file-upload}__status-item--PaddingBottom);
   border-block-end: var(--#{$multiple-file-upload}__status-item--BorderWidth) solid var(--#{$multiple-file-upload}__status-item--BorderColor);
-
-  &:first-child {
-    --#{$multiple-file-upload}__status-item--PaddingTop: var(--#{$multiple-file-upload}__status-item--first-child--PaddingTop);
-  }
 }
 
 .#{$multiple-file-upload}__status-item-icon {
